# advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md  advent-of-code.nu  helper.nu  overlay.nu  template.rs
aoc_2015/: Cargo.toml
aoc_2016/: Cargo.toml
aoc_2025/: Cargo.toml
runner/: Cargo.toml
runner/src/: main.rs
solutions/aoc_2015/: Cargo.toml
solutions/aoc_2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
solutions/aoc_2016/: Cargo.toml
