[workspace]
members = [
    "aoc_2015",
    "aoc_2016", 
    "aoc_2025",
]

resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
pathfinding = "4.14.0"
serde_json = "1.0.143"
rustc-hash = "2.1.1"
itertools = "0.14.0"
rayon = "1.11.0"
indoc = "2.0"
plotters = "0.3.7"
catppuccin = "2.6.0"
cached = "0.56.0"

[profile.profiling]
inherits = "release" 
debug = 2 
strip = false 
opt-level = 3 
lto = false
