[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
pathfinding = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
hex-literal = "1.0.0"
md-5 = "0.10.6"