[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
pathfinding = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
plotters = { workspace = true }
catppuccin = { workspace = true }
winnow = "0.7.14"
z3 = "0.19.6"

[dev-dependencies]
indoc = { workspace = true }

