
[package]
name = "aoc_2016"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
pathfinding = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
md-5 = "0.10.6"
hex-literal = "1.0.0"
hex = "0.4.3"
